crates/ofml-lib/tests/unit/snapshots/unit__unit__tui_snapshot_test__snapshot_tests__manufacturer_list_selected.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: buffer_str
---
OAP Konfigurator - Hersteller                                                   
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌ Hersteller (3) ──────────────────────────────────────────────────────────────┐
│  sex          Sedus                                                          │
│▶ vitra        Vitra                                                          │
│  kn           Knoll                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
↑↓: Navigation | Enter: Auswählen | /: Suchen | q: Beend
